--- a/src/components/productDisplay/ProductDisplay.module.css
+++ b/src/components/productDisplay/ProductDisplay.module.css
@@ -6,13 +6,15 @@
 
 .product_image_container{
     width: 50%;
+    display: flex;
+    justify-content: center;
 }
 
 .product_image{
-    width: 90%;
+    width: 70%;
     height: 80vh;
     object-fit: cover;
-    object-position: top;
+    border-radius: 1.5rem;
 }
 
 .product_info_container{
