--- a/src/components/banner/Banner.module.css
+++ b/src/components/banner/Banner.module.css
@@ -3,7 +3,6 @@
     justify-content: space-between;
     padding-left: 2rem;
     padding-right: 2rem;
-    height: 100vh;
 }
 
 .left{
@@ -27,7 +26,7 @@
 }
 
 .left p{
-    width: 25%;
+    width: max-content;
     font-family: mono;
     border-bottom: 2px solid #70707081;
     cursor: pointer;
