--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -1,6 +1,6 @@
 .wrapper{
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 2vw;
+    padding-right: 2vw;
     padding-bottom: 14vmax;
     display: flex;
     justify-content: space-between;
@@ -37,4 +37,28 @@
     cursor: pointer;
     font-size: 1rem;
     text-transform: uppercase;
+}
+/* tablet version */
+
+@media (max-width:1000px){
+    .wrapper{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 4vmax;
+    }
+
+    .left{
+        width: 80%;
+    }
+
+    .left h1{
+        font-size: 4vmax;
+    }
+
+    .right{
+        width: 80%;
+        gap: 2vmax;
+        align-items: center;
+    }
 }
