--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,6 +1,9 @@
 .wrapper{
-    padding: 2rem 2rem;
+    padding: 2vw 2vw;
     background: #1c1d20;
+}
+
+.container{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,8 +12,8 @@
 .logo{
     color: #fff;
     font-family: futura;
-    font-size: 1.5rem;
-    line-height: 2.2rem;
+    font-size: 1.5vmax;
+    line-height: 2.4vmax;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -21,10 +24,10 @@
 }
 
 .registered{
-    font-size: .7rem;
+    font-size: .7vmax;
     position: absolute;
-    top: -.5rem;
-    right: .8rem;
+    top: -1vmax;
+    right: .8vmax;
 }
 
 .socials{
@@ -37,5 +40,39 @@
 .copyright{
     color: #fff;
     font-family: helve-med;
+    font-size: 1.5vmax;
     letter-spacing: .1rem;
+}
+
+.copyright_mobile{
+    display: none;
+}
+
+/* mobile version */
+
+@media (max-width:650px){
+    .logo{
+        flex-direction: row;
+        gap: .5vmax;
+    }
+
+    .registered{
+        right: -1vmax;
+    }
+    .copyright{
+        display: none;
+    }
+
+    .copyright_mobile{
+        color: #fff;
+        font-family: helve-med;
+        font-size: 1.5vmax;
+        letter-spacing: .1rem;
+        display: block;
+        padding-top: .5rem;
+    }
+
+    .socials{
+        font-size: 2.5vmax;
+    }
 }
