--- a/src/components/gallery/Gallery.module.css
+++ b/src/components/gallery/Gallery.module.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     width: 25%;
-    gap: 2rem;
+    gap: 2vw;
     white-space: nowrap;
     min-width: 250px;
     position: relative;
@@ -31,7 +31,7 @@
     display: flex;
     flex-direction: column;
     width: 25%;
-    gap: 2rem;
+    gap: 2vw;
     white-space: nowrap;
     min-width: 250px;
     position: relative;
@@ -51,7 +51,7 @@
     display: flex;
     flex-direction: column;
     width: 25%;
-    gap: 2rem;
+    gap: 2vw;
     white-space: nowrap;
     min-width: 250px;
     position: relative;
@@ -71,7 +71,7 @@
     display: flex;
     flex-direction: column;
     width: 25%;
-    gap: 2rem;
+    gap: 2vw;
     white-space: nowrap;
     min-width: 250px;
     position: relative;
