responsive shopCategory page

--- a/src/components/productText/ProductText.module.css
+++ b/src/components/productText/ProductText.module.css
@@ -1,6 +1,8 @@
 .product_intro{
     text-align: center;
     padding-bottom: 14vmax;
+    padding-left: 2vw;
+    padding-right: 2vw;
     font-family: helve-med;
     font-size: 5vmax;
     color: #3d424f;
