--- a/src/components/banner/Banner.module.css
+++ b/src/components/banner/Banner.module.css
@@ -1,8 +1,8 @@
 .wrapper{
     display: flex;
     justify-content: space-between;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 2vw;
+    padding-right: 2vw;
 }
 
 .left{
@@ -15,9 +15,8 @@
 
 .left h1{
     font-family: futura;
-    font-size: 5vmax;
+    font-size: 4vmax;
     text-transform: uppercase;
-    font-size: 3rem;
 }
 
 .left h2{
@@ -33,7 +32,6 @@
     font-size: 1rem;
     text-transform: uppercase;
 }
-
 .center{
     width: 33.33%;
     display: flex;
@@ -61,3 +59,58 @@
 }
 
 
+/* tablet version */
+
+@media (max-width:1000px){
+
+    .left h2{
+        font-size: 2.2vmax;
+    }
+}
+
+/* mobile version */
+
+@media (max-width:650px){
+    .wrapper{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        position: relative;
+        height: 140vw;
+    }
+
+    .left{
+        width: 80%;
+        align-items: center;
+    }
+
+    .left h1{
+        font-size: 6vw;
+    }
+
+    .left h2{
+        font-size: 3.5vmax;
+    }
+    
+    .center{
+        position: absolute;
+        top: 20rem;
+        left: 0rem;
+        width: 50%;
+    }
+
+    .center img{
+        width: 90%;
+    }
+
+    .right{
+        position: absolute;
+        right: 1vmax;
+        top: 20rem;
+        width: 50%;
+    }
+
+    .right img{
+        width: 95%;
+    }
+}
