--- a/src/components/orderDetails/OrderDetails.module.css
+++ b/src/components/orderDetails/OrderDetails.module.css
@@ -50,3 +50,12 @@
 .container button:active{
     background-color: #2d2d2d;
 }
+
+/* tablet version */
+
+@media (max-width:1000px){
+  .container{
+    width: 100%;
+    margin-left: 0;
+  }
+}
