--- a/src/components/productDisplay/ProductDisplay.module.css
+++ b/src/components/productDisplay/ProductDisplay.module.css
@@ -1,6 +1,6 @@
 .wrapper{
-    padding-left:2rem;
-    padding-right: 2rem;
+    padding-left:2vw;
+    padding-right: 2vw;
     padding-top: 2rem;
     display: flex;
     height: 100%;
@@ -13,8 +13,8 @@
 }
 
 .product_image{
-    width: 70%;
-    height: 44vmax;
+    width: 80%;
+    height: 90%;
     object-fit: cover;
     border-radius: 1.5rem;
 }
@@ -156,3 +156,24 @@
     background-color: #000000;
 }
 
+/* mobile version */
+
+@media (max-width:700px){
+    .wrapper{
+        flex-direction: column;
+        gap: 3vmax;
+        align-items: center;
+    }
+
+    .product_image_container{
+        width: 100%;
+    }
+
+    .product_image{
+        height: 80vmax;
+    }
+
+    .product_info_container{
+        width:80%;
+    }
+}
