--- a/src/components/banner/Banner.module.css
+++ b/src/components/banner/Banner.module.css
@@ -76,7 +76,7 @@
         align-items: center;
         text-align: center;
         position: relative;
-        height: 140vw;
+        height: 50rem;
     }
 
     .left{
